# neuroinquisitor

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.claude/memory/: feedback_run_commands.md
.github/workflows/: ci.yml  claude.yml
docs/: PROJECT-OVERVIEW.md  SPRINT-01-PROJECT-SETUP.md  SPRINT-02-CORE-CLASS.md  SPRINT-03-SNAPSHOT-AND-STORAGE.md  SPRINT-03-SNAPSHOT-MECHANISM.md  SPRINT-04-HDF5-STORAGE-BACKEND.md  SPRINT-04-INTEGRATION-AND-TESTING.md  SPRINT-05-ARTIFACT-SCHEMA-AND-CAPTURE-POLICY.md  SPRINT-05-BASIC-USAGE-TESTING.md  SPRINT-06-REPLAY-ACTIVATION-AND-GRADIENT-CAPTURE.md  SPRINT-07-01-Examples.md  SPRINT-07-ANALYZERS-AND-CACHING.md  SPRINT-07-STANDARD-FORMATS-AND-ANALYZER-INTERFACE.md  SPRINT-08-BUILT-IN-ANALYZERS-AND-CACHING.md  SPRINT-08-PLUGIN-ECOSYSTEM-AND-STORAGE-EXTENSIBILITY.md  SPRINT-08-STANDARD-FORMATS-STORAGE-AND-DEVELOPER-ERGONOMICS.md  SPRINT-09-DEVELOPER-ERGONOMICS-AND-CLI.md  SPRINT-09-WEB-GUI-FOUNDATION.md  SPRINT-10-AI-ASSISTED-ANALYZER-GENERATION.md  SPRINT-10-LLM-SCALE-CORE-FIXES.md  SPRINT-10-WEB-GUI-FOUNDATION.md  SPRINT-11-CLOUD-STORAGE-AND-MODERN-FORMATS.md  SPRINT-12-QWEN7B-FINETUNING-SHOWCASE.md  deep-research-report.md  phase3_plan.md
docs/red-flags/: 001-snapshot-tensor-conversion.md  README.md
examples/: append_run.py  basic_usage.py  basic_usage_utils.py  cifar10_example.py  cifar10_example_utils.py  grokking_example.py  grokking_example_utils.py  mnist_example.py  mnist_example_utils.py  multi_arch_showcase.py  multi_arch_showcase_utils.py  run_all.py  s3_backend_example.py  snapshot_selection.py
examples/captum_use_examples/: cifar10_captum.py  cifar10_captum_utils.py  grokking_captum.py  grokking_captum_utils.py  run_all.sh
examples/configs/: .env.example  basic_usage.yaml  captum_use_examples_cifar10_captum.yaml  captum_use_examples_grokking_captum.yaml  cifar10_example.yaml  grokking_example.yaml  mnist_example.yaml  multi_arch_showcase.yaml  s3_backend_example.yaml  specific_actions_append_run.yaml  specific_actions_load_and_filter.yaml  specific_actions_replay_logits.yaml  specific_actions_snapshot_selection.yaml  specific_actions_store_epochs.yaml  specific_actions_store_steps.yaml  specific_actions_track_activations.yaml  specific_actions_track_gradients.yaml  torchlens_use_examples_torchlens_cifar10.yaml  transformerlens_use_examples_cifar10_transformerlens.yaml
examples/specific_actions/: append_run.py  fiftyone_embed.py  load_and_filter.py  replay_logits.py  snapshot_selection.py  store_epochs.py  store_steps.py  tensorboard_projector.py  tracin_example.py  track_activations.py  track_gradients.py
examples/torchlens_use_examples/: torchlens_cifar10.py  torchlens_cifar10_utils.py
examples/transformerlens_use_examples/: cifar10_transformerlens.py  cifar10_transformerlens_utils.py
memory/: feedback_run_commands.md
src/neuroinquisitor/: __init__.py  collection.py  core.py  loader.py  replay.py  schema.py
src/neuroinquisitor/analysis/: __init__.py  base.py  registry.py
src/neuroinquisitor/analyzers/: __init__.py  probe.py  projection.py  similarity.py  spectrum.py  trajectory.py
tests/: test_analyzers.py  test_core.py  test_export_formats.py  test_hdf5_format.py  test_import.py  test_integration.py  test_parquet.py  test_registry.py  test_replay.py  test_s3_backend.py  test_safetensors_format.py  test_schema.py  test_snapshot.py  test_storage.py
tests/compat/: conftest.py  test_captum.py  test_fiftyone.py  test_tensorboard.py  test_torchlens.py  test_tracin.py  test_transformerlens.py
(+13 files in other folders)
